# hizt

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
docs/: conf.py
src/hizt/: __init__.py  array_factory.py  hist.py  util.py
tests/: test_histogram.py
